--- a/Professor/createQuestion.html
+++ b/Professor/createQuestion.html
@@ -1,8 +1,15 @@
 <HTML>
   <head>
     <title>Create Question Page</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
   </head>
   <body>
+    <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a class="active" href="createQuestion.html">Create Question</a></li>
+    <li><a href="createTest.html">Create Test</a></li>
+  </ul>
+  <br><h1>Create Question</h1>
     <textarea id="question" rows="10" cols="80">Please type your question here, professor.</textarea><br><br>
     <button onclick="makeRequestData('createTest.php')" id="submit">Submit</button>
     <script>
