Beta 0.5 Everything works Except Grading and Login

--- a/Professor/createQuestion.html
+++ b/Professor/createQuestion.html
@@ -12,7 +12,7 @@
   </ul>
   <br><h1>Create Question</h1>
     <textarea id="question" rows="10" cols="80">Please type your question here, professor.</textarea><br><br>
-    <button onclick="makeRequestData('createTest.php')" id="submit">Submit</button>
+<button onclick="makeRequestData('createQuestion.php')" id="submit">Submit</button>
     <script>
 
     </script>
