--- a/Professor/createTest.html
+++ b/Professor/createTest.html
@@ -2,9 +2,9 @@
 	<head>
 		<title>Create a Test</title>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
-		<script type="text/javascript" src="../js/createTest.js"></script>
+		<script type="text/javascript" src="../js/createExam.js"></script>
 	</head>
-	<body onload="makeRequest('json.php');">
+	<body onload="makeRequest('getQuestions.php');">
 		<ul>
 	  <li><a href="index.html">Home</a></li>
 	  <li><a href="createQuestion.html">Create Question</a></li>
