--- a/Student/takeTest.html
+++ b/Student/takeTest.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css">
   <script type="text/javascript" src="../js/takeTest.js"></script>
   </head>
-<body onload="makeRequest('json.php');">
+<body onload="makeRequest('getTest.php');">
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="takeTest.html">Take Test</a></li>
