--- a/Professor/index.html
+++ b/Professor/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Professor Homepage</title>
   <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <script type="text/javascript" src="../js/releaseScores.js"></script>
 </head>
 <body>
   <ul>
@@ -13,6 +14,7 @@
 <br><hr><br>
 When you are ready, you can release scores, or create questions and tests by clicking the links above.
 <br><br>
-<button id="releaseScores">Release Scores</button>
+<button id="releaseScores" onclick="makeRequestData('releaseScores.php')">Release Scores</button>
+<div id="released"></div>
 </body>
 </html>
